# STARWARS-ASCII-ANIMATION

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: CMakeLists.txt  SMCDoubleList.hpp  movie.cpp  movie.h
tests/: CMakeLists.txt  catch.cpp  studentTests.cpp
